--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                     <div class="col-md-12">
                         <h1 class="page-head-line">民革简介</h1>
                         <div class="row">
-                            <h1 class="text-center"><strong>中国国民党革命委员会</strong></h1>
+                            <h1 class="text-center"><strong>武汉市武昌区国民革命委员会</strong></h1>
                             <div style="padding: 10px"></div>
                             <div class="col-md-7" style="overflow: hidden;">
                                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -148,21 +148,21 @@
                                     <!-- Wrapper for slides -->
                                     <div class="carousel-inner" role="listbox">
                                     <div class="item active">
-                                        <img src="/media/2.1.jpg" alt="...">
+                                        <img src="/media/1.12.jpg" alt="...">
                                         <div class="carousel-caption">
-                                            <h3 style="color: black">此处为简介</h3>
+                                            <h3 style="color: black">简介</h3>
                                         </div>
                                     </div>
                                     <div class="item">
-                                        <img src="/media/2.2.jpg" alt="...">
+                                        <img src="/media/1.11.jpg" alt="...">
                                         <div class="carousel-caption">
-                                            <h3 style="color: black">此处为简介</h3>
+                                            <h3 style="color: black">简介</h3>
                                         </div>
                                     </div>
                                     <div class="item">
-                                        <img src="/media/2.3.jpg" alt="...">
+                                        <img src="/media/1.13.jpg" alt="...">
                                         <div class="carousel-caption">
-                                            <h3 style="color: black">此处为简介</h3>
+                                            <h3 style="color: black">简介</h3>
                                         </div>
                                     </div>
                                     </div>
@@ -179,9 +179,11 @@
                                 </div>
                             </div>
 
-                            <div class="col-md-4 col-md-offset-1" >
+                            <div class="col-md-5 col-md-offset-0" >
                                     <h4><strong>简介</strong></h4>
                                     <p><strong>&nbsp; &nbsp; 中国国民党革命委员会（The Revolutionary Committee Of The Chinese Kuomintang）简称民革，中华人民共和国现有的民主党派之一，由中国国民党民主派和其他爱国民主人士创建、具有政治联盟特点、为社会主义服务的政党，是与执政党中国共产党通力合作的一个参政党。</strong></p>
+                                <p>&nbsp;&nbsp;&nbsp;&nbsp;中国国民党革命委员会（简称民革）是中国共产党领导的多党合作制度下的参政党，以同原中国国民党有关系的人士、同本党有历史联系和社会联系的人士、同台湾各界有联系的人士、社会和法制专业人士以及其他人士为发展对象，具有政治联盟性质,自1948年元旦成立已经七十年。武汉市武昌区工作区委员会（简称民革武昌工委会）是民革武汉市委员会在武昌的派驻机构，现有9个基层支部，截至2017年底共有党员212人，其中具有高级职称的78人，市人大代表2人，
+                                    市政协委员6人，区人大代表7人，其中区人大常委2人，区政协委员12人，其中区政协常委2人。</p>
                             </div>
                         </div>
                     </div>
@@ -196,7 +198,10 @@
 
                     <div class="row">
                         <div class="col-md-10 col-md-offset-1">
-                            <div class="para" label-module="para"> <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  建国以后，作为中国共产党领导的多党合作中的一个民主党派，民革许多领导人担任国家、政府、政协的重要职务，参加了国家政权建设和国家事务的管理。1949年11月，中国国民党民主派第二次代表会议在北京举行，确立了接受中国共产党领导和为新民主主义服务的政治路线。会议还决定，民革成立后仍保留各自组织的民联、民促结束活动，使民革真正成为了国民党爱国民主力量的统一组织。面对建国初期新的形势与任务，在中国共产党的领导和帮助下，民革组织全体党员认真学习马列主义、毛泽东思想，积极投身反帝爱国和争取祖国统一的伟大斗争，踊跃参加国家的各项民主改革和建设实践，为巩固人民民主政权，恢复和发展国民经济，实现过渡时期总任务，发挥了应有的作用。</strong></div>
+                            <div class="para" label-module="para">
+                                <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  建国以后，作为中国共产党领导的多党合作中的一个民主党派，民革许多领导人担任国家、政府、政协的重要职务，参加了国家政权建设和国家事务的管理。1949年11月，中国国民党民主派第二次代表会议在北京举行，确立了接受中国共产党领导和为新民主主义服务的政治路线。会议还决定，民革成立后仍保留各自组织的民联、民促结束活动，使民革真正成为了国民党爱国民主力量的统一组织。面对建国初期新的形势与任务，在中国共产党的领导和帮助下，民革组织全体党员认真学习马列主义、毛泽东思想，积极投身反帝爱国和争取祖国统一的伟大斗争，踊跃参加国家的各项民主改革和建设实践，为巩固人民民主政权，恢复和发展国民经济，实现过渡时期总任务，发挥了应有的作用。</strong>
+                                <strong></strong>
+                            </div>
                         </div>
                     </div>
 
@@ -216,36 +221,36 @@
                             <div class="row">
                                 <div class="col-md-4">
                                         <div style="overflow: hidden; ">
-                                            <img src="/media/2.1.jpg" alt="https://www.baidu.com" style="width: 100%;">
+                                            <img src="/media/2.11.jpg" alt="https://www.baidu.com" style="width: 100%;">
                                         </div>
 
                                         <div style="margin-top: 10px; padding: 5px">
                                             <p><strong>某某简介</strong></p>
-                                            <a href="https://www.baidu.com">查看详细</a>
+                                            <a href="{% url 'activity' %}">查看详细</a>
                                         </div>
 
                                 </div>
 
                                 <div class="col-md-4">
                                         <div style="overflow: hidden; ">
-                                            <img src="/media/2.2.jpg" alt="https://www.baidu.com" style="width: 100%;">
+                                            <img src="/media/2.22.jpg" alt="https://www.baidu.com" style="width: 100%;">
                                         </div>
 
                                         <div style="margin-top: 10px; padding: 5px">
                                             <p><strong>某某简介</strong></p>
-                                            <a href="https://www.baidu.com">查看详细</a>
+                                            <a href="{% url 'activity' %}">查看详细</a>
                                         </div>
 
                                 </div>
 
                                 <div class="col-md-4">
                                         <div style="overflow: hidden; ">
-                                            <img src="/media/2.3.jpg" alt="https://www.baidu.com" style="width: 100%;">
+                                            <img src="/media/2.33.jpg" alt="https://www.baidu.com" style="width: 100%;">
                                         </div>
 
                                         <div style="margin-top: 10px; padding: 5px">
                                             <p><strong>某某简介</strong></p>
-                                            <a href="https://www.baidu.com">查看详细</a>
+                                            <a href="{% url 'activity' %}">查看详细</a>
                                         </div>
 
                                 </div>
