--- a/templates/activity.html
+++ b/templates/activity.html
@@ -7,13 +7,13 @@
 
      {% load staticfiles %}
     <!-- BOOTSTRAP STYLES-->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" />
+    <link href="../static/css/bootstrap.css" rel="stylesheet" />
     <!-- FONTAWESOME STYLES-->
-    <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet" />
+    <link href="../static/css/font-awesome.css" rel="stylesheet" />
        <!--CUSTOM BASIC STYLES-->
-    <link href="{% static 'css/basic.css' %}" rel="stylesheet" />
+    <link href="../static/css/basic.css" rel="stylesheet" />
     <!--CUSTOM MAIN STYLES-->
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet" />
+    <link href="../static/css/custom.css" rel="stylesheet" />
     <!-- GOOGLE FONTS-->
     <link href='' rel='stylesheet' type='text/css' />
 </head>
@@ -139,60 +139,121 @@
 
                 </div>
 
-                <div class="row">
-                        <div class="panel panel-danger">
-                                <!-- Default panel contents -->
-                            <div class="panel-heading">活动1</div>
-                            <div class="row" style="margin: 10px">
-                                <div class="col-md-6">
-                                    <img src="/media/2.1.jpg" style="width: 100%">
-                                </div>
+                
 
-                                <div class="col-md-offset-1 col-md-4">
-                                    <p>活动简介</p>
-                                </div>
-                            </div>
-                            <div class="panel-body">
-                                <p>某某宝活动简干啥</p>
-                            </div>
-                        </div>
-                </div>
-
-                   <div class="row">
-                        <div class="panel panel-warning">
-                                <!-- Default panel contents -->
-                            <div class="panel-heading">活动1</div>
-                            <div class="row" style="margin: 10px">
-                                <div class="col-md-6">
-                                    <img src="/media/2.2.jpg" style="width: 100%">
-                                </div>
-
-                                <div class="col-md-offset-1 col-md-4">
-                                    <p>活动简介</p>
-                                </div>
-                            </div>
-                            <div class="panel-body">
-                                <p>某某宝活动简干啥</p>
-                            </div>
-                            </div>
-                   </div>
-
+                  
                    <div class="row">
                         <div class="panel panel-primary">
                                 <!-- Default panel contents -->
                             <div class="panel-heading">活动1</div>
                             <div class="row" style="margin: 10px">
-                                <div class="col-md-6">
-                                    <img src="/media/2.3.jpg" style="width: 100%">
+                                <div class="col-md-5">
+                                    <img src="../media/2.11.jpg" style="width: 95%">
+                                </div>
+                                
+     
+                                <div class="col-md-6" style="border-left: solid; height:250px; border-color:cornflowerblue">
+                                  <div class="row">
+                                      <div class="col-md-2">
+                                        <div style="width: 300px;">
+                                            <h4>活动标题</h4>
+                                        </div>
+                                      </div>
+                                  </div>  
+
+                                  <div class="row">
+                                    <div class="col-md-2">
+                                        <div style="width: 200px;">
+                                            <p>活动简介 &nbsp;&nbsp; 2018-9-08</p>
+                                        </div>
+                                    
+                                    </div>
+                                  </div>
+                                 
+                                  <hr style="margin-top: 10px; background-color: cornflowerblue; height: 1px">
+                                  <div >
+                                      <p>活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机按实际合格合格考进去就请假请假去我家就
+                                          快点开始考试的考试快卡死卡死卡死卡卡卡卡卡卡卡·我期间为契机</p>
+                                  </div>
+                                </div>
+                            </div>
+                            
+                            </div>
+                   </div>
+                   <div class="row">
+                        <div class="panel panel-warning">
+                                <!-- Default panel contents -->
+                            <div class="panel-heading">活动2</div>
+                            <div class="row" style="margin: 10px">
+                                <div class="col-md-5">
+                                    <img src="../media/2.22.jpg" style="width: 95%">
                                 </div>
 
-                                <div class="col-md-offset-1 col-md-4">
-                                    <p>活动简介</p>
+
+                                <div class="col-md-6" style="border-left: solid; height:250px; border-color:cornflowerblue">
+                                  <div class="row">
+                                      <div class="col-md-2">
+                                        <div style="width: 200px;">
+                                            <h4>活动标题</h4>
+                                        </div>
+                                      </div>
+                                  </div>
+
+                                  <div class="row">
+                                    <div class="col-md-2">
+                                        <div style="width: 200px;">
+                                            <p>活动简介 &nbsp;&nbsp; 2018-9-08</p>
+                                        </div>
+
+                                    </div>
+                                  </div>
+
+                                  <hr style="margin-top: 10px; background-color: cornflowerblue; height: 1px">
+                                  <div >
+                                      <p>活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机活动时间冻结案件肯定会的函数好烦加了肯德基的就撒
+                                          刘德华度埃斯科巴打号机活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机</p>
+                                  </div>
                                 </div>
                             </div>
-                            <div class="panel-body">
-                                <p>某某宝活动简干啥</p>
+
                             </div>
+                   </div>
+                   <div class="row">
+                        <div class="panel panel-primary">
+                                <!-- Default panel contents -->
+                            <div class="panel-heading">活动3</div>
+                            <div class="row" style="margin: 10px">
+                                <div class="col-md-5">
+                                    <img src="../media/2.33.jpg" style="width: 95%">
+                                </div>
+
+
+                                <div class="col-md-6" style="border-left: solid; height:250px; border-color:cornflowerblue">
+                                  <div class="row">
+                                      <div class="col-md-2">
+                                        <div style="width: 200px;">
+                                            <h4>活动标题</h4>
+                                        </div>
+                                      </div>
+                                  </div>
+
+                                  <div class="row">
+                                    <div class="col-md-2">
+                                        <div style="width: 200px;">
+                                            <p>活动简介 &nbsp;&nbsp; 2018-9-08</p>
+                                        </div>
+
+                                    </div>
+                                  </div>
+
+                                  <hr style="margin-top: 10px; background-color: cornflowerblue; height: 1px">
+                                  <div >
+                                      <p>活动时间冻结案件肯定会活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机活动时间冻结案件肯定会的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机活动时间冻结案件肯定会的函
+                                          数好烦加了肯德基的就撒刘德华度埃斯科巴打号机的函数好烦加了肯德基的就撒刘德华度埃斯科巴打号机</p>
+                                  </div>
+                                </div>
+                            </div>
+
                             </div>
                    </div>
                 </div>
@@ -208,14 +269,14 @@
     </div>
             <!-- /. FOOTER  -->
             <!-- SCRIPTS -AT THE BOTOM TO REDUCE THE LOAD TIME-->
-       <!-- JQUERY SCRIPTS -->
-    <script src="{% static 'js/jquery-1.10.2.js'%}"></script>
+    <!-- JQUERY SCRIPTS -->
+    <script src="../static/js/jquery-1.10.2.js"></script>
     <!-- BOOTSTRAP SCRIPTS -->
-    <script src="{% static 'js/bootstrap.js' %}"></script>
+    <script src="../static/js/bootstrap.js"></script>
     <!-- METISMENU SCRIPTS -->
-    <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
-       <!-- CUSTOM SCRIPTS -->
-    <script src="{% static 'js/jquery.metisMenu.js' %}"></script>
+    <script src="../static/js/jquery.metisMenu.js"></script>
+        <!-- CUSTOM SCRIPTS -->
+    <script src="../static/js/jquery.metisMenu.js"></script>
 
 
 
