--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
     <link href='' rel='stylesheet' type='text/css' />
 
 </head>
-<body style="background-color: #2c5caa;">
+<body background="/media/main1.jpg" style="width: 100%;">
     <div class="container">
         <div class="row text-center " style="padding-top:10px;">
             <div class="col-md-6 col-md-offset-3">
