--- a/templates/userinformation_add.html
+++ b/templates/userinformation_add.html
@@ -90,7 +90,7 @@
 
             <div class="col-md-12">
                 <h1 class="page-head-line">增加个人详细信息</h1>
-                <h1 class="page-subhead-line">加 * 的为必填项</h1>
+                <h1 class="page-subhead-line">加 * 的为必填项&nbsp;{{ msg }}</h1>
                 <a class="btn btn-success" href="#basic-info">基本信息</a>
                 <a class="btn btn-warning" href="#edu-info"> 学历信息</a>
                 <a class="btn btn-info" href="#addr-info">单位地址</a>
