--- a/templates/userinformation.html
+++ b/templates/userinformation.html
@@ -171,7 +171,7 @@
                                                                         <div>
                                                                                 <div class="form-group">
                                                                                     <label class="">性别：</label>
-                                                                                    <label class="form-control">{% ifequal user.PartyDocuNum '男' %}男{% endifequal%}{% ifequal user.PartyDocuNum '女' %}女{% endifequal%}</label>
+                                                                                    <label class="form-control">{% ifequal userinfo.PartyDocuNum '男' %}男{% endifequal%}{% ifequal user.PartyDocuNum '女' %}女{% endifequal%}</label>
                                                                                 </div>
                                                                         </div>
 
